[package]
name = "rs_pider_robots"
version = "0.1.0"
authors = ["Brady McDonough <brady.mcd.codes@gmail.com>"]
description = "The robots.txt parsing module for rs-pider"

[dependencies]
# Maybe version gate Reqwest along with some other libraries
reqwest = "^0.9"

[dependencies.base_url]
version = "^0.0.10"
